# Jarvis

./: .editorconfig  .env.production.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  =0.5.2  Dockerfile  Dockerfile.prod  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_network_and_actions.py  003_home_automation.py  004_journal_feature.py  005_work_notes_feature.py  006_user_settings.py  007_work_user_profile.py  008_journal_user_profile.py  009_journal_fact_extractions.py  010_dns_security.py  011_dns_analytics.py  012_llm_usage_tracking.py  013_fix_llm_usage_cost_precision.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  action_types.py  error_handlers.py  exceptions.py  logging.py  middleware.py  rate_limit.py  security.py
backend/app/models/: __init__.py
backend/app/services/: account_intelligence.py  actions.py  agent.py  dns.py  dns_advanced_detection.py  dns_alert_manager.py  dns_analytics_tasks.py  dns_client_profiling.py  dns_domain_reputation.py  dns_llm_analysis.py  dns_tasks.py  health.py  journal.py  journal_tasks.py  llm_usage.py  ollama.py  openai_service.py  search.py  settings.py  snmp.py  ssh.py  work_notes.py
backend/app/tools/: __init__.py  base.py  dns_analytics_tools.py  dns_tools.py  home_tools.py  infrastructure_actions.py  journal_tools.py  (+5 more)
backend/tests/: __init__.py  conftest.py
(+74 files in other folders)
